@@ -8,6 +8,7 @@
 - The 'Manage power bar' option ('Frames') has been removed.  Use Edit Mode to move the encounter bar.
 - The 'Manage focus' option ('Frames') has been removed.  Use Edit Mode to move the focus frame.
 - The 'Hide gryphons' option ('Frames') has been removed.  Use Edit Mode to hide the gryphons.
+- The 'Hide hide bags and micro' option ('Frames') has been removed.  You can hide bags with the arrow button next to the backpack icon.
 
 9.2.45 - 19th October 2022
 - Dragonflight: For 'Enhance tooltip' ('Interface'), all of the tooltip settings work again except show target (this will be fixed later).
